Move permalink button and change the title

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -473,12 +473,6 @@
              data-placement="right" data-trigger="hover" data-content="Search">
             <i class="fa fa-search" aria-hidden="true"></i>
         </div>
-        <div id="permalink-control" class="permalink-control sub-control-panel"
-        data-toggle="popover"
-             data-placement="right" data-trigger="hover"
-             data-content="Copy Permalink">
-            <i class="fa fa-link" aria-hidden="true"></i>
-        </div>
         <div id="filter-control" class="filter-control sub-control-panel"
         data-toggle="popover"
              data-placement="right" data-trigger="hover"
@@ -518,6 +512,12 @@
              data-placement="right" data-trigger="hover"
              data-content="Print Map">
             <i class="fa fa-print" aria-hidden="true"></i>
+        </div>
+        <div id="permalink-control" class="permalink-control sub-control-panel"
+        data-toggle="popover"
+             data-placement="right" data-trigger="hover"
+             data-content="Copy sharable link for this map">
+            <i class="fa fa-link" aria-hidden="true"></i>
         </div>
     </div>
     <div id="zoom-control" class="zoom-control row">
