Wrote some lines as output placeholder. Used jquery to push the data onto the page

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2182,3 +2182,8 @@ div:hover::-webkit-scrollbar {
     background-color: #1b900d;
     color: white;
 }
+
+.layer-source-info {
+    text-align: center;
+    font-size: 80%;
+}
