Fetch all taxon from excel and show the list to template

--- a/sass/static/css/form_page.css
+++ b/sass/static/css/form_page.css
@@ -11,6 +11,11 @@ body {
 
 .body-form {
     padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.bold {
+    font-weight: bold;
 }
 
 .body-form input {
