Add create function

--- a/sass/static/css/form_page.css
+++ b/sass/static/css/form_page.css
@@ -44,6 +44,7 @@ td.sampled-name {
     border-radius: 5px;
     padding-left: 50px;
     padding-right: 50px;
+    padding-bottom: 30px;
     font-weight: normal;
 }
 
