--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block body_content %}
-    <form action="/sass/9300/" method="post">
+    <form action="/sass/9300/" method="post" id="sass-form">
     {% csrf_token %}
     <div class="body-form container">
         <div class="row">
@@ -240,7 +240,7 @@
             </tr>
             <tr>
                 <td colspan="5" scope="row">
-                    <textarea class="form-control rounded" rows="6"></textarea>
+                    <textarea class="form-control rounded" rows="6" name="other-biota"></textarea>
                 </td>
             </tr>
             <tr>
@@ -250,14 +250,37 @@
             </tr>
             <tr>
                 <td colspan="5" scope="row">
-                    <textarea class="form-control rounded" rows="6"></textarea>
+                    <textarea class="form-control rounded" rows="6" name="notes"></textarea>
                 </td>
             </tr>
             </tbody>
         </table>
         <div class="submit-wrapper">
-            <input type="submit" class="btn btn-info" value="Submit">
+            <input type="button" name="btn" id="submitBtn" data-toggle="modal" data-target="#confirm-submit" class="btn btn-info" value="Submit">
         </div>
+
+        <div class="modal fade" id="confirm-submit" tabindex="-1" role="dialog"
+             aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        Confirm Submit
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to submit the SASS form?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default"
+                                data-dismiss="modal">Cancel
+                        </button>
+                        <a href="#" id="submit"
+                           class="btn btn-success success">Submit</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
     </form>
@@ -268,5 +291,6 @@
     <!-- Plugin JavaScript -->
     <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/sass_5_record.js" %}"></script>
 
 {% endblock %}
